--- a/src/sass/layouts/modal-windows/_modal-4-location.scss
+++ b/src/sass/layouts/modal-windows/_modal-4-location.scss
@@ -12,8 +12,7 @@
   margin-bottom: 24px;
 
   @media screen and(min-width: 481px) {
-    width: 448px;
-    height: 260px;
+    margin-bottom: 32px;
   }
 }
 
