--- a/src/sass/layouts/modal-windows/_modal-windows-global.scss
+++ b/src/sass/layouts/modal-windows/_modal-windows-global.scss
@@ -3,6 +3,8 @@
   opacity: 0;
   visibility: hidden;
 
+  // pointer-events: none;
+
   overflow-y: scroll;
 
   /*  Установаем ширину окна  */
@@ -77,6 +79,8 @@
 .overlay {
   opacity: 0;
   visibility: hidden;
+
+  // pointer-events: none;
 
   position: fixed;
   top: 0;
