--- a/src/sass/layouts/modal-windows/_modal-1-buy-now.scss
+++ b/src/sass/layouts/modal-windows/_modal-1-buy-now.scss
@@ -1,7 +1,7 @@
 .buy-now_modal {
   
   @media screen and(max-width: 480px) {
-    max-height: 100%;
+    // max-height: 100%;
     overflow-y: scroll;
   }
 }
@@ -62,6 +62,11 @@
   height: 132px;
 
   border-radius: 50%;
+}
+
+.buy-now_modal-image {
+  position: absolute;
+  top: -7px;
 }
 
 .icecream_underlay {
