--- a/src/sass/layouts/modal-windows/_modal-2-buy-now_ingredients.scss
+++ b/src/sass/layouts/modal-windows/_modal-2-buy-now_ingredients.scss
@@ -13,6 +13,7 @@
 }
 
 .buy-now-ingredients_image-underlay {
+  position: relative;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 24px; 
@@ -24,6 +25,12 @@
 
   background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #d9d9d9;
   box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
+}
+
+.ingedients_modal-image {
+  position: absolute;
+  top: -7px;
+  border-radius: 50%;
 }
 
 .buy-now-ingredients_list {
