--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -42,7 +42,7 @@
   &__circle {
     display: block;
     position: relative;
-    background: var(--primery-title-color);
+    background: var(--primery-accent-color);
     border-radius: 25px;
     width: 50px;
     height: 50px;
