--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -8,7 +8,7 @@
   --primery-title-color: #131313;
   --primery-hover-color: #0a8817;
   --primery-br-hover-color: #0a8817;
-  --primery-bg-color: #0a8817;
+  --main-bg-color: #84a178;
 
   --primery-title-font: 'Seymour One';
   --main-animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
