--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -37,8 +37,8 @@
 
       <li class="contacts__item">
         <ul class="list contacts__chapter">
-          <li class="contacts__category">
-            <p class="contacts__representation">FOODTRUCK</p>
+          <li class="contacts__category contacts__category--big">
+            <p class="contacts__representation">FOOD TRUCK</p>
           </li>
           <li class="contacts__city">
             <p class="">Los Angeles</p>
