--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: var(--primery-bg-color);
+  background-color: var(--main-bg-color);
   font-family: 'Montserrat';
   font-style: normal;
   color: #fcfcfc;
