--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -45,14 +45,18 @@
         </div>
   
         <div class="footer-contacts">
-          <address class="footer-contacts__address">
+          <ul class="footer-contacts__address">
+            <li class="footer-contacts__data">
             <span class="footer-contacts__text">Feel free to contact</span>
+            </li>
+            <li class="footer-contacts__data">
             <a class="footer-contacts__tel" href="tel:+610383766284"
               >+61 (0) 383 766 284</a>
-          </address>
+          </li>
+          </ul>
         </div>
-      </div>
     <div class="copyright">
       <p class="copyright__text"> © 2022 - IceCream. All Rights Reserved. </p>
     </div>
+    <div>
   </footer>
