--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -24,7 +24,7 @@
     line-height: 1.22;
     text-transform: uppercase;
     margin-bottom: 16px;
-    color: $primery-text-color;
+    color: var(--primery-text-color);
     @media screen and (min-width: 1200px) {
       font-style: normal;
       text-transform: uppercase;
