--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="section-contacts">
+<section class="section-contacts" id="contacts">
   <div class="container contacts">
     <h2 class="visually-hidden">Our contacts</h2>
 
@@ -76,7 +76,7 @@
             <p class="">New York</p>
           </li>
           <li class="contacts__address address-short">
-            <a class="link " href=""
+            <a class="link" href=""
               >726 Sterling Pl, Brooklyn, NY 11222, USA
             </a>
           </li>
