--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="container products">
+<section class="container products" id="products">
   <div class="products__content">
     <strong class="products__label-title">100% natural</strong>
     <h2 class="products__title">Products</h2>
