--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -16,7 +16,7 @@
     width: 234px;
     margin-bottom: 40px;
   }
-  &__paragraf {
+  &__paragraph {
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 700;
