--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -50,7 +50,7 @@
 }
 }
 .footer-banner__header {
-  font-family: 'Montserrat' sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 34px;
   line-height: 1.2;
   font-style: normal;
@@ -123,7 +123,7 @@
   margin-right: 4px;
 }
 .footer-contacts__text {
-  font-family: 'Montserrat' sans-serif;
+  font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -137,7 +137,7 @@
     }
 }
 .footer-contacts__tel {
-  font-family: 'Montserrat' sans-serif;
+  font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -159,7 +159,7 @@
   padding: 16px 20px;
   
   &__text {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
