--- a/src/sass/layouts/_about.scss
+++ b/src/sass/layouts/_about.scss
@@ -1,5 +1,5 @@
 .about {
-  background-color: #84A178;
+  background-color: #84a178;
   text-align: center;
 
   &.section {
@@ -17,11 +17,12 @@
     align-items: center;
     @media screen and (min-width: 768px) {
       flex-direction: row;
-      justify-content: space-between;
+      // justify-content: space-between;
       align-items: flex-start;
       margin-bottom: 8px;
     }
   }
+
   &__uppertitle {
     margin-bottom: 12px;
 
@@ -40,8 +41,8 @@
       line-height: 1.23;
     }
     @media screen and (min-width: 1200px) {
-        font-size: 30px;
-        line-height: 1.24;
+      font-size: 30px;
+      line-height: 1.24;
     }
   }
   &__title {
@@ -74,7 +75,12 @@
     display: block;
     width: 278.19px;
     height: 278.25px;
-    background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
+    background: linear-gradient(
+        0deg,
+        rgba(248, 210, 78, 0.7),
+        rgba(248, 210, 78, 0.7)
+      ),
+      #d9d9d9;
     box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
     border-radius: 140.182px;
     margin-bottom: 60px;
@@ -83,6 +89,7 @@
       height: 330px;
       border-radius: 165.879px;
       margin-bottom: 0px;
+      margin-right: 100px;
     }
     @media screen and (min-width: 1200px) {
       width: 500px;
