--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -3,27 +3,29 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-color: #84A178;
-    // background-image: url(/src/images/header/points.desc_@2x.png);
+     @media screen and (max-width: 767px){
+        background-image: url(/src/images/header/points.mobile_@2x.png);
+        height: 448px;
+        
+    }
     @media screen and (min-width: 768px) and (max-width: 1199px){
         height: 338px;
+        background-image: url(/src/images/header/points.tablet_@2x.png);
     }
-    @media screen and (max-width: 767px)
-    {
-        height: 448px;
+    @media screen and (min-width: 1200px) {
+        background-image: url(/src/images/header/points.desc_@2x.png); 
     }
 }
-.hero__container {
-    position: relative;
-}
+
 .thumb {
-    @media screen and (max-width: 767px){
-        display: none;
-    }
     position: absolute;
     left: 90%;
     display: flex;
     flex-direction: column;
     
+    @media screen and (max-width: 767px){
+        display: none;
+    }
    
 }
 .thumb__numbers {
@@ -65,7 +67,7 @@
     color: var(--primery-text-color);
     
     @media screen and (min-width: 1200px) {
-        // padding-right: 15px;
+        
         font-size: 14px;
         line-height: 1.28;
     }
@@ -75,20 +77,15 @@
     flex-direction: column;
     display: flex;
     @media screen and (max-width: 767px) {
-        margin-left: 20px;
         margin-top: 61px;
     }
     
     @media screen and (min-width: 768px) and (max-width: 1199px){
-        margin-left: 32px;
         margin-top: 40px;
-
     }
 
     @media screen and (min-width: 1200px) {
-        margin-left: 17px;
         margin-top: 41px;
-       
     }
 }
 
@@ -128,11 +125,9 @@
 
 .wrap-hero-buttons{
     margin-top: 32px;
-    margin-left: 20px;
 
     display: flex;
     align-items: center;
-    
     @media screen and (max-width: 1199px) {
         gap: 8px;
     }
@@ -179,18 +174,23 @@
     
 }
 .ice-cream__description{
+    @media screen and (max-width: 767px){
+        display: none;
+    }
     display: flex;
     margin-top: 28px;
     margin-bottom: 13px;
-    margin-left: 32px;
     gap: 33px;
+}
+.description{
+    margin-top: 56px;
 }
 .ice-cream{
     @media screen and (max-width: 767px) {
         display: none;
     }
 }
-.description {
+.description__text {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -206,25 +206,36 @@
 
 .ice-cream__main{
     @media screen and (max-width: 767px){
+        z-index: 1;
         width: 157px;
-        height: 207px;
-        margin-top: 32px;
+        height: 208px;
+        position: absolute;
+       
+
 
     }
     @media screen and (min-width: 768px) and (max-width: 1199px){
+        z-index: 1;
         width: 257px;
         height: 325px;
-        margin-top: 6px;
+        position: absolute;
+        right: 93px;
+        bottom: auto;
+
+    
     }
     @media screen and (min-width: 1200px) {
-        margin-top: 4px;
+        z-index: 1;
         width: 447px;
         height: 561px;
+        position: absolute;
+        right: 102px;
+        bottom: auto;
 
     }
     
 }
-.hero-favicon{
-    fill: #FCFCFC;
-}
+// .hero-favicon{
+//     fill: #FCFCFC;
+// }
 
