--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,9 +1,11 @@
 <footer class="footer">
     <div class="footer__container container">
-        <div class="footer-banner">
+        <ul class="footer-banner">
+          <li>
         <p class="footer-banner__paragraph">homemade ice cream made</p>
         <p class="footer-banner__header">with passion</p>
-           </div>
+          </li>
+        </ul>
         <div class="socials">
           <ul class="socials__list list">
             <li class="socials__item">
@@ -45,18 +47,14 @@
         </div>
   
         <div class="footer-contacts">
-          <ul class="footer-contacts__address">
-            <li class="footer-contacts__data">
+          <address class="footer-contacts__address">
             <span class="footer-contacts__text">Feel free to contact</span>
-            </li>
-            <li class="footer-contacts__data">
             <a class="footer-contacts__tel" href="tel:+610383766284"
               >+61 (0) 383 766 284</a>
-          </li>
-          </ul>
+          </address>
         </div>
+    </div>
     <div class="copyright">
       <p class="copyright__text"> © 2022 - IceCream. All Rights Reserved. </p>
     </div>
-    <div>
   </footer>
