--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -18,9 +18,9 @@
     <div class="ice-cream__description">
       <div>
         <picture>
-          <source media="(min-width:1200px)" srcset="/project_group/ice-cream.header.desc_@1x.png, /project_group/ice-cream.header.desc_@2x.png">
-          <source media="(min-width:1200px)" srcset="/project_group/ice-cream.header.tablet_@1x.png, /project_group/ice-cream.header.tablet_@2x.png">
-          <source media="(min-width:1200px)" srcset="/project_group/ice-cream.header.mobile_@1x.png, /project_group/ice-cream.header.mobile_@2x.png">
+          <source media="(min-width:1200px)" srcset="./images/header/ice-cream.header.desc_@1x.png, ./images/header/ice-cream.header.desc_@2x.png">
+          <source media="(min-width:768px)" srcset="./images/header/ice-cream.header.tablet_@1x.png, ./images/header/ice-cream.header.tablet_@1x.png">
+          <!-- <source media="(min-width:1200px)" srcset="/project_group/ice-cream.header.mobile_@1x.png, /project_group/ice-cream.header.mobile_@2x.png"> -->
         <img width="225px" height="225px"
           class="ice-cream"
           src="/src/images/header/ice-cream.header.desc_@1x.png"
@@ -41,9 +41,9 @@
   </div>
     <div>
       <picture>
-        <source media="(min-width:1200px)" srcset="/project_group/rojok.header.desc_@1x.png, /project_group/rojok.header.desc_@2x.png">
-        <source media="(min-width:1200px)" srcset="/project_group/rojok.header.tablet_@1x.png, /project_group/rojok.header.tablet_@2x.png">
-        <source media="(min-width:1200px)" srcset="/project_group/rojok.header.mobile_@1x.png, /project_group/rojok.header.mobile_@2x.png">
+        <source media="(min-width:1200px)" srcset="./images/header/rojok.header.desc_@1x.png, ./images/header/rojok.header.desc_@2x.png">
+        <source media="(min-width:768px)" srcset="./images/header/rojok.header.tablet_@1x.png, ./images/header/rojok.header.tablet_@2x.png">
+        <source media="(min-width:200px)" srcset="./images/header/rojok.header.mobile_@1x.png, ./images/header/rojok.header.mobile_@2x.png">
         <img 
           class="ice-cream__main"
           src="/src/images/header/rojok.header.desc_@1x.png"
