--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,7 @@
 <footer class="footer">
     <div class="footer__container container">
-        <ul class="footer-banner">
+        <div class="footer__main">
+      <ul class="footer-banner">
           <li>
         <p class="footer-banner__paragraph">homemade ice cream made</p>
         <p class="footer-banner__header">with passion</p>
@@ -14,8 +15,8 @@
                 target="_blank"
                 rel="noreferrer noopener"
                 aria-label="link to GitHub">
-                <svg class="socials__icon" width="34" height="34">
-                  <use href="images\svg\icons.svg#github-default"></use>
+                <svg class="socials__icon" width="20" height="20">
+                  <use href="images\svg\icons.svg#icon-git"></use>
                 </svg>
               </a>
             </li>
@@ -25,8 +26,8 @@
                 target="_blank"
                 rel="noreferrer noopener"
                 aria-label="link to Telegram">
-                <svg class="socials__icon" width="34" height="34">
-                  <use href="images\svg\icons.svg#telegram-default"></use>
+                <svg class="socials__icon" width="20" height="20">
+                  <use href="images\svg\icons.svg#icon-telegram"></use>
                 </svg>
               </a>
             </li>
@@ -36,17 +37,15 @@
                 target="_blank"
                 rel="noreferrer noopener"
                 aria-label="link to Facebook">
-                <svg class="socials__icon" width="34" height="34">
+                <svg class="socials__icon" width="20" height="20">
                   <use
-                    href="./images\svg\icons.svg#facebook-default">
+                    href="./images\svg\icons.svg#icon-facebook">
                 </use>
                 </svg>
               </a>
             </li>
           </ul>
-        </div>
-  
-        <div class="footer-contacts">
+  <div class="footer-contacts">
           <address class="footer-contacts__address">
             <span class="footer-contacts__text">Feel free to contact</span>
             <a class="footer-contacts__tel" href="tel:+610383766284"
@@ -54,7 +53,9 @@
           </address>
         </div>
     </div>
+        </div>
     <div class="copyright">
       <p class="copyright__text"> © 2022 - IceCream. All Rights Reserved. </p>
+    </div>
     </div>
   </footer>
