optimize code and images, add variables

--- a/src/partials/modals.html
+++ b/src/partials/modals.html
@@ -281,14 +281,18 @@
         ./images/modal/location-modal/map-desktop_896.jpg 2x
       "
     />
-    <img src="./images/modal/location-modal/map-desktop_896.jpg" alt="Map">
+    <img src="./images/modal/location-modal/map-desktop_896.jpg" alt="Map" />
   </picture>
   <!-- <img
     class="location-image"
     src="./images/modal/location-modal/map-desktop_448.jpg"
     alt="Map"
   /> -->
-  <a class="open-map_link" href="https://goo.gl/maps/gjFAeG6t4nSM62w7A" target="_blank" rel="norefferer noopener"
+  <a
+    class="open-map_link"
+    href="https://goo.gl/maps/gjFAeG6t4nSM62w7A"
+    target="_blank"
+    rel="norefferer noopener"
     >Open Map</a
   >
 </div>
