--- a/src/sass/layouts/modal-windows/_modal-1-buy-now.scss
+++ b/src/sass/layouts/modal-windows/_modal-1-buy-now.scss
@@ -1,7 +1,5 @@
 .buy-now_modal {
-  
   @media screen and(max-width: 480px) {
-    // max-height: 100%;
     overflow-y: scroll;
   }
 }
@@ -35,6 +33,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  user-select: none;
 }
 
 .buy-now_thumb {
@@ -51,7 +50,7 @@
 
   filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));
   border-radius: 16px;
-  transition: 1s all;
+  transition: var(--main-animation);
 }
 
 .image_underlay {
@@ -70,17 +69,32 @@
 }
 
 .icecream_underlay {
-  background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #d9d9d9;
+  background: linear-gradient(
+      0deg,
+      rgba(156, 190, 143, 0.7),
+      rgba(156, 190, 143, 0.7)
+    ),
+    #d9d9d9;
   box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
 }
 
 .icecoffee_underlay {
-  background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #d9d9d9;
+  background: linear-gradient(
+      0deg,
+      rgba(248, 210, 78, 0.7),
+      rgba(248, 210, 78, 0.7)
+    ),
+    #d9d9d9;
   box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
 }
 
 .milkshake_underlay {
-  background: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #d9d9d9;
+  background: linear-gradient(
+      0deg,
+      rgba(213, 117, 63, 0.7),
+      rgba(213, 117, 63, 0.7)
+    ),
+    #d9d9d9;
   box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
 }
 
@@ -92,52 +106,16 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
 
-  color: #131313;
+  color: var(--primery-title-color);
 }
 
 .buy-now_form {
-margin-right: auto;
-margin-left: auto;
+  margin-right: auto;
+  margin-left: auto;
 
   @media screen and(min-width: 768px) {
     max-width: 368px;
   }
-}
-
-.input {
-  width: 100%;
-  margin-bottom: 12px;
-
-  padding: 8px 12px 7px 12px;
-
-  background: rgba(248, 210, 78, 0.1);
-  outline: 1px solid #84a178;
-  border: none;
-  border-radius: 10px;
-
-  font-family: 'Montserrat';
-  font-weight: 400;
-  font-size: 12px;
-  line-height: calc(17 / 12);
-
-  color: #131313;
-}
-
-.input::placeholder {
-  font-family: 'Montserrat';
-  font-weight: 400;
-  font-size: 12px;
-  line-height: calc(17 / 12);
-
-  color: #131313;
-}
-
-input:valid {
-  outline: 1px solid #84a178;
-}
-
-.input:invalid {
-  outline: 2px solid red;
 }
 
 .checkbox {
