--- a/src/sass/layouts/modal-windows/_modal-5-franchise.scss
+++ b/src/sass/layouts/modal-windows/_modal-5-franchise.scss
@@ -1,6 +1,5 @@
 .franchise_modal {
   @media screen and(max-width: 480px) {
-    // height: auto;
     overflow-y: scroll;
   }
 
@@ -15,5 +14,5 @@
   font-weight: 400;
   font-size: 14px;
   line-height: calc(20 / 14);
-  color: #131313;
+  color: var(--primery-title-color);
 }
