--- a/src/sass/layouts/modal-windows/_modal-windows-global.scss
+++ b/src/sass/layouts/modal-windows/_modal-windows-global.scss
@@ -3,8 +3,6 @@
   opacity: 0;
   visibility: hidden;
 
-  // pointer-events: none;
-
   overflow-y: scroll;
 
   /*  Установаем ширину окна  */
@@ -32,10 +30,10 @@
   /*  Побочные стили   */
   //   box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
   text-align: center;
-  transition: 0.3s all;
+  transition: var(--main-animation);
 
-  background-color: #fcfcfc;
-  border: 2px solid #f8d24e;
+  background-color: var(--primery-text-color);
+  border: 2px solid var(--primery-border-color);
   border-radius: 10px;
 }
 
@@ -66,11 +64,11 @@
   font-family: 'Seymour One';
   font-size: 16px;
   line-height: calc(24 / 16);
-  color: #131313;
+  color: var(--primery-title-color);
 
   @media screen and(min-width: 768px) {
     margin-bottom: 32px;
-    
+
     font-size: 20px;
     line-height: calc(28 / 20);
   }
@@ -79,15 +77,12 @@
 .overlay {
   opacity: 0;
   visibility: hidden;
-
-  // pointer-events: none;
-
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.3);
   z-index: 20;
   transition: 0.3s all;
 }
@@ -98,7 +93,7 @@
 }
 
 .modal-close {
-  background-color: #fff;
+  background-color: var(--primery-text-color);
   border: none;
 }
 
@@ -107,11 +102,11 @@
   width: 114px;
   height: 42px;
 
-  background-color: #f8d24e;
+  background-color: var(--primery-bg-color);
   border: none;
   border-radius: 10px;
 
-  color: #131313;
+  color: var(--primery-title-color);
   font-family: 'Montserrat';
   font-weight: 600;
   font-size: 12px;
@@ -119,7 +114,7 @@
 
   @media screen and(min-width:481px) {
     margin-top: 32px;
-    
+
     width: 121px;
     font-size: 14px;
     line-height: calc(17 / 14);
@@ -133,15 +128,38 @@
   }
 }
 
-// необовязкова фігня
-// .buttons {
-//   padding: 15px;
-//   display: flex;
-//   flex-direction: column;
-//   gap: 15px;
-// }
+.input {
+  width: 100%;
+  margin-bottom: 12px;
 
-// .open-modal {
-//   width: 200px;
-//   height: 50px;
-// }
+  padding: 8px 12px 7px 12px;
+
+  background: rgba(248, 210, 78, 0.1);
+  outline: 1px solid var(--main-bg-color);
+  border: none;
+  border-radius: 10px;
+
+  font-family: 'Montserrat';
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(17 / 12);
+
+  color: var(--primery-title-color);
+}
+
+.input::placeholder {
+  font-family: 'Montserrat';
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(17 / 12);
+
+  color: var(--primery-title-color);
+}
+
+input:valid {
+  outline: 1px solid var(--main-bg-color);
+}
+
+.input:invalid {
+  outline: 2px solid red;
+}
